Update to lunar

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pika-wallpapers (1.3.0-99pika.lunar1) lunar; urgency=medium
+
+  * First release
+
+ -- Jeremy Soller <jeremy@system76.com>  Thu, 21 Apr 2017 13:20:00 -0600
+
 pika-wallpapers (1.2.1) kinetic; urgency=medium
 
   * First release
