--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pika-wallpapers (1.3.0-101pika1) pika; urgency=medium
+
+  * Port to PikaOS 4
+
+ -- Ward Nakchbandi <hotrod.master@hotmail.com>  Thu, 21 Apr 2017 13:20:00 -0600
+
 pika-wallpapers (1.3.0-99pika.lunar2) lunar; urgency=medium
 
   * First release
